Tue Nov 20 20:54:25 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gunidecomp.[ch] glib/gen-unicode-tables.pl: Patch
	from Andrew Taylor to optimize the decomposition table
	to eliminate relocations and save space. (#64982)

2001-11-18  Hans Breuer  <hans@breuer.org>

	* glib/glib.def : 
	* glib/makefile.msc.in : remove g_log_domain_glib usage/export

	* tests/makefile.msc.in : add iochannel-test

Sat Nov 17 17:21:57 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/Makefile.am glib/*.c glib/gmessages.h: Get
	rid of g_log_domain_glib variable in favor of just
	using a string constant.

Sat Nov 17 14:10:35 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gbsearcharray.h: Include gtypes.h not gobject/gtype.h

	* glib/glib-object.h gobject/*.h: Prevent headers from
	being included directly except when compiling GObject.

	* gobject/gvaluecollector.h: Include glib-object.h so that
	this file can be included directly, since we don't
	include it _from_ glib-object.h.

	* gobject/gtype.c: Remove struct _GValue hack since we 
	now include glib/gvaluecollector.h which simply pulls in
	glib-object.h.

2001-11-15  Matthias Clasen  <matthiasc@poet.de>

	* glib/giochannel.c: Documentation fixes.
 
2001-11-15  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* configure.in: Added "ja" to ALL_LINGUAS.

2001-11-15  Michael Meeks  <michael@ximian.com>

	* glib/giounix.c (g_io_channel_unix_new): set the fd
	before using it.

2001-11-15  Tor Lillqvist  <tml@iki.fi>

	* tests/makefile.{mingw,msc}.in (TESTS): Add back mainloop-test
	here, too.

	* tests/Makefile.am: Remove leftover comment that claimed
	mainloop-test is removed.

2001-11-14  Matthias Clasen  <matthiasc@poet.de>

	* glib/gpattern.c: add UTF-8 support.

	* tests/patterntest.c: add UTF-8 and equality tests.

Wed Nov 14 07:34:24 2001  Tim Janik  <timj@gtk.org>

	* glib/galloca.h (g_newa): provide g_newa(ctype, count) on top of
	g_alloca() like we provide g_new() on top of g_malloc().
