@@ -115,6 +115,7 @@ EXPORTS
 	g_param_spec_sink
 	g_param_spec_steal_qdata
 	g_param_spec_string
+	g_param_spec_types
 	g_param_spec_uchar
 	g_param_spec_uint
 	g_param_spec_uint64
@@ -186,7 +187,6 @@ EXPORTS
 	g_type_depth
 	g_type_free_instance
 	g_type_from_name
-	g_type_fundamental_branch_last
 	g_type_fundamental_last
 	g_type_get_plugin
 	g_type_get_qdata
