@@ -12,7 +12,7 @@ include ../build/win32/make.mingw
 # Nothing much configurable below
 
 INCLUDES = -I .. -I ../glib -I .
-DEFINES = -DHAVE_CONFIG_H -DGOBJECT_COMPILATION -DG_LOG_DOMAIN=g_log_domain_gruntime -DG_ENABLE_DEBUG
+DEFINES = -DHAVE_CONFIG_H -DGOBJECT_COMPILATION -DG_LOG_DOMAIN=\"GLib-GObject\" -DG_ENABLE_DEBUG
 
 srcdir=.
 
